kubernetes/apps/flux-system/flux-operator/instance/github/webhooks/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-webhook
spec:
  parentRefs:
  - name: external-gateway-cloudflare
    namespace: network
  hostnames:
  - "flux-webhook.${SECRET_DOMAIN}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /hook/
    backendRefs:
    - name: webhook-receiver
      port: 80
